--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h1>how are we</h1>
                     <div class="hhh">
                         <img class="im" src="./css/images2/we (4).jpg" alt="">
-                        <P class="subject"> we are king tour company <br>Offering tours around the world Where enjoyment,
+                        <P class="subject"> we are a tour company <br>Offering tours around the world Where enjoyment,
                             adventure, launch, fun, suspense and excitement</P>
                         <p></p>
                     </div>
@@ -286,7 +286,7 @@
                 <div class="type">
                     <h3>tourism tour</h3>
                     <div class="imagbox">
-                        <img src="./css/images2/pexels-oziel-gómez-7529416.jpg">
+                        <img src="./css/images2/istatour.jpg">
                     </div>
                     <div class="content">
                         <h2>tourism tour</h2>
